tests/ui/pattern/move-ref-patterns/move-ref-patterns-default-binding-modes-fixable.stderr
warning: dereferencing `mut` binding
  --> $DIR/move-ref-patterns-default-binding-modes-fixable.rs:10:13
   |
LL |     let (a, mut b) = &mut p;
   |             ^^^^^ `mut` dereferences the type of this binding
   |
help: this will change in edition 2024
  --> $DIR/move-ref-patterns-default-binding-modes-fixable.rs:10:13
   |
LL |     let (a, mut b) = &mut p;
   |             ^^^^^
   = note: `#[warn(dereferencing_mut_binding)]` on by default

error[E0507]: cannot move out of a mutable reference
  --> $DIR/move-ref-patterns-default-binding-modes-fixable.rs:10:22
   |
LL |     let (a, mut b) = &mut p;
   |             -----    ^^^^^^
   |             |
   |             data moved here
   |             move occurs because `b` has type `U`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |     let (a, ref mut b) = &mut p;
   |             +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0507`.
